Read Repository from File System